crates/omni-types/tests/compile_fail/cannot_implement_encrypted_type_externally.stderr
error[E0277]: the trait bound `EvilType: encrypted::sealed::Sealed` is not satisfied
  --> tests/compile_fail/cannot_implement_encrypted_type_externally.rs:12:47
   |
12 | impl omni_types::encrypted::EncryptedType for EvilType {
   |                                               ^^^^^^^^ the trait `encrypted::sealed::Sealed` is not implemented for `EvilType`
   |
   = help: the following other types implement trait `encrypted::sealed::Sealed`:
             AttestedHash
             EncryptedString
             MaskedSSN
             TokenizedEmail
note: required by a bound in `EncryptedType`
  --> src/encrypted.rs
   |
   | pub trait EncryptedType: sealed::Sealed + Sized {
   |                          ^^^^^^^^^^^^^^ required by this bound in `EncryptedType`
   = note: `EncryptedType` is a "sealed trait", because to implement it you also need to implement `omni_types::encrypted::sealed::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
   = help: the following types implement the trait:
             omni_types::encrypted::EncryptedString
             omni_types::encrypted::MaskedSSN
             omni_types::encrypted::TokenizedEmail
             omni_types::encrypted::AttestedHash
